src/objects/Backlog_history__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Cases__c</fullName>
        <label>Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Backlog history</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Region__c</columns>
        <columns>Value__c</columns>
        <columns>Closed_Cases__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Backlog history Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog history</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>